--- a/css/common.css
+++ b/css/common.css
@@ -142,6 +142,90 @@ header{
 .white-div p{
     font-style: italic;
 }
+
+.white-div span{
+    border-radius: 50%;
+    display: inline-block;
+    padding: 1.5rem;
+    margin: 1.5625rem 0px;
+}
+
+
+/* Testimonials */
+
+.testimonials p, h2, h3{
+    text-align: center;
+    line-height: 1.5rem;
+}
+
+.testimonials h2{
+    color: var(--secondary-color);
+    margin: 2rem 0px;
+    font-size: 2rem;
+}
+
+.testimonials-img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 2rem;
+}
+
+.test-card{
+    margin-bottom: 2rem
+}
+
+.test-card h3{
+    padding: 1rem;
+    color: white;
+}
+
+.flex .test-card:last-child{
+    margin-bottom: 5rem;
+}
+
+/* Benefits */
+
+.benefits{
+    padding-top: 5rem;
+}
+
+.benefits-card{
+    background-color: white;
+    margin: 2rem 0rem;
+    border-radius: 25px;
+    padding: 2.5rem;
+}
+
+.benefits-card h2, h3{
+    color: var(--secondary-color);
+    text-align: left;
+}
+
+.benefits-card h2{
+    font-family:'Courier New', Courier, monospace;
+    font-size: 3rem;
+    padding: 1rem;
+    padding-left: 0rem;
+
+}
+
+.benefits-card p{
+    margin-top: 2rem;
+    line-height: 2rem;
+    color: black;
+    opacity: 0.8;
+}
+
+.benefits-card span{
+    display: inline-block;
+    background-color: var(--secondary-color);
+    border-radius: 25px;
+    padding: 1rem 2rem;
+    margin-top: 1rem;
+}
+
 /* Query */
 
 
