--- a/css/common.css
+++ b/css/common.css
@@ -226,6 +226,94 @@ header{
     margin-top: 1rem;
 }
 
+.about-us{
+    line-height: 2rem;
+    margin-bottom: 5rem;
+}
+
+.about-us h2{
+    color: var(--secondary-color);
+    margin: 2rem 0rem;
+    text-align: left;
+    font-size: 2.5rem;
+}
+
+.about-us p{
+    margin-bottom: 2rem;
+}
+
+.contact-div{
+    position: relative;
+    display: inline-block;
+}
+
+.contact-div i{
+    position: absolute;
+    font-size: 5rem;
+    left: calc(100% - 3rem);
+    color: var(--secondary-color)
+}
+
+.contact-img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 2rem;
+}
+
+.contact h2{
+    color: var(--secondary-color);
+    line-height: 3rem;
+}
+.contact span{
+    padding: 1rem;
+    border-radius: 25px;
+}
+
+/* Get Started */
+
+.get-started{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 2.5rem;
+
+}
+
+.get-started *{
+    padding: 1rem 0rem;
+   
+}
+
+.get-started h4{
+    font-weight: 100;
+}
+
+.get-started h3{
+    color: white;
+}
+
+.get-started h2{
+    color: #fdc15f;
+    font-size: 3rem;
+}
+
+.get-button{
+    padding: 1rem 2rem;
+    border: none;
+    background-color: white;
+    color: var(--secondary-color);
+    border-radius: 50px;
+    font-size: 1.5rem;
+    
+}
+.get-started i{
+    font-size: .5rem;
+}
+
+
 /* Query */
 
 
