--- a/css/common.css
+++ b/css/common.css
@@ -158,6 +158,13 @@ header{
     line-height: 1.5rem;
 }
 
+.testimonials h3{
+    margin-top: 2.5rem;
+    color: black;
+    text-align: center;
+    font-weight: 100;
+}
+
 .testimonials h2{
     color: var(--secondary-color);
     margin: 2rem 0px;
@@ -313,7 +320,20 @@ header{
     font-size: .5rem;
 }
 
+/* Footer */
 
+footer{
+    background-color: #333333;
+    color: white;
+    text-align: center;
+}
+footer p{
+    margin-bottom: 2rem;
+
+}
+footer a{
+    color: var(--secondary-color);
+}
 /* Query */
 
 
